--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,40 @@
+:root {
+	--light: #f5f5f5;
+	--yellow: #fbc02d;
+	--black: #333333;
+	--dark-yellow: #c49000;
+}
+
 * {
-    background-color: ;
+	background-color: var(--light);
+	font-family: 'Fauna One', serif;
+	font-family: 'Raleway', sans-serif;
+}
+
+header {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0 50px;
+}
+
+.instructions {
+	display: flex;
+	border: 5px solid var(--black);
+	border-radius: 5px;
+	text-align: center;
+	margin: 2rem 2rem;
+}
+
+h2 {
+	font-family: 'Fauna One', serif;
+}
+p {
+	font-family: 'Raleway', sans-serif;
+}
+
+.start {
+	font-family: 'Fauna One', serif;
+	font-size: 200%;
+	background-color: var(--yellow);
 }
