--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -112,11 +112,20 @@ li {
 }
 
 @media screen and (max-width: 520px) {
-	header,
-	.choices {
+	.choices,
+	.questions-header {
 		display: flex;
 		flex-direction: column;
 		justify-content: center;
 		font-size: 1em;
+	}
+
+	.high-score-header {
+		padding: 0;
+	}
+
+	li {
+		font-size: 1em;
+		width: 10em;
 	}
 }
